--- a/src/css/GiaoDien.css
+++ b/src/css/GiaoDien.css
@@ -43,7 +43,7 @@
     -fx-background-radius: 20 0 0 20;
     -fx-background-color: #fff;
     -fx-border-width: 2 0 2 2;
-    -fx-border-color: black;
+    -fx-border-color: black
     -fx-border-style: solid;
     -fx-border-radius: 20 0 0 20;
 
@@ -53,7 +53,7 @@
     -fx-background-radius: 20 0 0 20;
     -fx-background-color: #fff;
     -fx-border-width: 2 0 2 2;
-    -fx-border-color: black;
+    -fx-border-color: black
     -fx-border-style: solid;
     -fx-border-radius: 20 0 0 20;
 }
