--- a/src/View/SanPham.fxml
+++ b/src/View/SanPham.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -13,13 +14,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="715.2" prefWidth="1111.2" styleClass="bottom-radius" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPhamController">
+<AnchorPane prefHeight="715.2" prefWidth="1111.2" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPhamController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="bottom-radius" stylesheets="@../css/SanPham.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox fx:id="tblSanPham" prefHeight="402.0" prefWidth="1111.0" style="-fx-background-color: #fff;" stylesheets="@../css/SanPham.css">
+            <HBox fx:id="tblSanPham" prefHeight="402.0" prefWidth="1111.0" style="-fx-background-color: #fff;" stylesheets="@../css/SanPham.css" VBox.vgrow="ALWAYS">
                <children>
-                  <TableView prefHeight="387.0" prefWidth="1078.0" styleClass="box-radius" stylesheets="@../css/SanPham.css">
+                  <TableView prefHeight="387.0" prefWidth="1078.0" styleClass="box-radius" stylesheets="@../css/SanPham.css" HBox.hgrow="ALWAYS">
                     <columns>
                       <TableColumn prefWidth="75.0" text="C1" />
                       <TableColumn prefWidth="75.0" text="C2" />
@@ -41,9 +42,9 @@
                   <String fx:value="shadow" />
                </styleClass>
             </HBox>
-            <HBox prefHeight="298.0" prefWidth="1111.0" style="-fx-background-color: #345;" stylesheets="@../css/SanPham.css">
+            <HBox prefHeight="298.0" prefWidth="1111.0" spacing="10.0" stylesheets="@../css/SanPham.css" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox prefHeight="298.0" prefWidth="762.0">
+                  <VBox prefHeight="298.0" prefWidth="762.0" stylesheets="@../css/SanPham.css" HBox.hgrow="ALWAYS">
                      <children>
                         <HBox prefHeight="301.0" prefWidth="750.0">
                            <children>
@@ -131,16 +132,55 @@
                            </children>
                         </HBox>
                      </children>
+                     <styleClass>
+                        <String fx:value="shadow" />
+                        <String fx:value="box-radius" />
+                        <String fx:value="white-background" />
+                     </styleClass>
+                     <HBox.margin>
+                        <Insets bottom="5.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox prefHeight="298.0" prefWidth="375.0" />
+                  <VBox prefHeight="298.0" prefWidth="375.0" stylesheets="@../css/SanPham.css" HBox.hgrow="ALWAYS">
+                     <styleClass>
+                        <String fx:value="box-radius" />
+                        <String fx:value="shadow" />
+                        <String fx:value="white-background" />
+                     </styleClass>
+                     <HBox.margin>
+                        <Insets bottom="5.0" />
+                     </HBox.margin>
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="52.0" prefWidth="347.0" stylesheets="@../css/SanPham.css">
+                           <children>
+                              <Label text="CHỨC NĂNG" />
+                           </children>
+                           <styleClass>
+                              <String fx:value="header-chuc-nang" />
+                              <String fx:value="top-radius-15" />
+                           </styleClass>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                           <children>
+                              <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="125.0" styleClass="shadow" stylesheets="@../css/SanPham.css" text="THÊM">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/icons8-add-50.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="94.0" styleClass="shadow" stylesheets="@../css/SanPham.css" text="THÊM" />
+                              <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="94.0" styleClass="shadow" stylesheets="@../css/SanPham.css" text="THÊM" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                </children>
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" />
                </VBox.margin>
-               <styleClass>
-                  <String fx:value="box-radius" />
-                  <String fx:value="shadow" />
-               </styleClass>
             </HBox>
          </children>
       </VBox>
@@ -149,4 +189,8 @@
       <URL value="@../css" />
       <URL value="@../css/SanPham.css" />
    </stylesheets>
+   <styleClass>
+      <String fx:value="bottom-radius" />
+      <String fx:value="white-background" />
+   </styleClass>
 </AnchorPane>
