new SanPham form

--- a/src/View/SanPham.fxml
+++ b/src/View/SanPham.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -16,174 +16,92 @@
 
 <AnchorPane prefHeight="715.2" prefWidth="1111.2" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPhamController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="bottom-radius" stylesheets="@../css/SanPham.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox prefHeight="651.0" prefWidth="625.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox fx:id="tblSanPham" prefHeight="402.0" prefWidth="1111.0" style="-fx-background-color: #fff;" stylesheets="@../css/SanPham.css" VBox.vgrow="ALWAYS">
+            <VBox prefHeight="706.0" prefWidth="794.0" spacing="15.0">
+               <HBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
                <children>
-                  <TableView prefHeight="387.0" prefWidth="1078.0" styleClass="box-radius" stylesheets="@../css/SanPham.css" HBox.hgrow="ALWAYS">
+                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="675.0">
+                     <children>
+                        <JFXComboBox labelFloat="true" prefHeight="35.0" prefWidth="94.0" promptText="Tìm kiếm " />
+                        <HBox alignment="CENTER_LEFT" fillHeight="false" maxHeight="-Infinity" prefHeight="38.0" prefWidth="201.0" styleClass="search-btn" stylesheets="@../css/SanPham.css">
+                           <children>
+                              <TextField prefHeight="26.0" prefWidth="170.0" styleClass="transparent" stylesheets="@../css/SanPham.css" />
+                              <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/icons8-search-50.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
+                  <TableView maxHeight="-Infinity" prefHeight="646.0" prefWidth="675.0" styleClass="box-radius" stylesheets="@../css/SanPham.css">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                        <TableColumn prefWidth="75.0" text="Column X" />
+                      <TableColumn prefWidth="75.0" text="Mã SP" />
+                      <TableColumn prefWidth="75.0" text="Tên SP" />
+                        <TableColumn prefWidth="102.40005493164062" text="Số lượng" />
+                        <TableColumn prefWidth="121.5999755859375" text="Đơn giá" />
+                        <TableColumn prefWidth="75.0" text="Mã loại" />
+                        <TableColumn prefWidth="75.0" text="IMG" />
                     </columns>
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </HBox.margin>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
                </children>
-               <VBox.margin>
-                  <Insets bottom="5.0" left="10.0" right="10.0" />
-               </VBox.margin>
-               <styleClass>
-                  <String fx:value="box-radius" />
-                  <String fx:value="shadow" />
-               </styleClass>
-            </HBox>
-            <HBox prefHeight="298.0" prefWidth="1111.0" spacing="10.0" stylesheets="@../css/SanPham.css" VBox.vgrow="ALWAYS">
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="715.0" prefWidth="545.0">
                <children>
-                  <VBox prefHeight="298.0" prefWidth="762.0" stylesheets="@../css/SanPham.css" HBox.hgrow="ALWAYS">
+                  <VBox alignment="CENTER" prefHeight="254.0" prefWidth="427.0">
                      <children>
-                        <HBox prefHeight="301.0" prefWidth="750.0">
-                           <children>
-                              <HBox prefHeight="299.0" prefWidth="984.0">
-                                 <children>
-                                    <VBox alignment="CENTER" prefHeight="299.0" prefWidth="284.0">
-                                       <children>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </VBox>
-                                    <VBox alignment="CENTER" prefHeight="299.0" prefWidth="284.0">
-                                       <children>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                             <children>
-                                                <Label text="Label" />
-                                                <TextField />
-                                             </children>
-                                          </HBox>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              <VBox alignment="CENTER" prefHeight="299.0" prefWidth="602.0">
-                                 <children>
-                                    <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../img/cafe.png" />
-                                       </image>
-                                    </ImageView>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" style="-fx-border-color: red;">
+                           <image>
+                              <Image url="@../img/cafe.png" />
+                           </image>
+                        </ImageView>
                      </children>
-                     <styleClass>
-                        <String fx:value="shadow" />
-                        <String fx:value="box-radius" />
-                        <String fx:value="white-background" />
-                     </styleClass>
-                     <HBox.margin>
-                        <Insets bottom="5.0" />
-                     </HBox.margin>
                   </VBox>
-                  <VBox prefHeight="298.0" prefWidth="375.0" stylesheets="@../css/SanPham.css" HBox.hgrow="ALWAYS">
-                     <styleClass>
-                        <String fx:value="box-radius" />
-                        <String fx:value="shadow" />
-                        <String fx:value="white-background" />
-                     </styleClass>
-                     <HBox.margin>
-                        <Insets bottom="5.0" />
-                     </HBox.margin>
+                  <VBox prefHeight="350.0" prefWidth="427.0">
                      <children>
-                        <HBox alignment="CENTER" prefHeight="52.0" prefWidth="347.0" stylesheets="@../css/SanPham.css">
+                        <VBox>
                            <children>
-                              <Label text="CHỨC NĂNG" />
+                              <Label text="Mã SP" />
+                              <TextField maxWidth="-Infinity" prefHeight="26.0" prefWidth="270.0" VBox.vgrow="NEVER" />
                            </children>
-                           <styleClass>
-                              <String fx:value="header-chuc-nang" />
-                              <String fx:value="top-radius-15" />
-                           </styleClass>
-                        </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                        </VBox>
+                        <VBox>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="125.0" styleClass="shadow" stylesheets="@../css/SanPham.css" text="THÊM">
-                                 <graphic>
-                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../img/icons8-add-50.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="94.0" styleClass="shadow" stylesheets="@../css/SanPham.css" text="THÊM" />
-                              <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="94.0" styleClass="shadow" stylesheets="@../css/SanPham.css" text="THÊM" />
+                              <Label text="Tên SP" />
+                              <TextField maxWidth="-Infinity" prefHeight="26.0" prefWidth="270.0" />
                            </children>
-                        </HBox>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Số lượng" />
+                              <TextField />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Đơn giá" />
+                              <TextField />
+                           </children>
+                        </VBox>
+                        <VBox>
+                           <children>
+                              <Label text="Mã loại" />
+                              <TextField />
+                           </children>
+                        </VBox>
                      </children>
                   </VBox>
                </children>
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" />
-               </VBox.margin>
-            </HBox>
+            </VBox>
          </children>
-      </VBox>
+      </HBox>
    </children>
    <stylesheets>
       <URL value="@../css" />
