--- a/src/css/SanPham.css
+++ b/src/css/SanPham.css
@@ -25,7 +25,9 @@
 .shadow{
     -fx-effect: dropShadow(three-pass-box,rgba(0,0,0,0.1), 10.0, 0.0,0.0,10.0);
 }
-
+.shadow-1{
+    -fx-effect: dropShadow(three-pass-box,rgba(0,0,0,0.5),5,0,0,0);
+}
 .table-view .column-header-background {
     -fx-background-color: #FFF7D4;
     -fx-background-radius: 15 15 0 0;
@@ -61,13 +63,19 @@
 }
 
 .search-btn{
-    -fx-border-radius: 20;
-    -fx-border-color: #ccc;
+    -fx-border-width: 0 0 1.3 0;
+    -fx-opacity: 0.4;
+    -fx-border-color: #000;
+    -fx-font-family: Cambria;
+    -fx-font-size: 15;
 }
 
-.img{
-    -fx-border-color: red;
-    -fx-border-width: 2;
+.click-search-btn{
+    -fx-border-width: 0 0 2 0;
+    -fx-opacity: 1;
+    -fx-border-color: #000;
+    -fx-font-family: Cambria;
+    -fx-font-size: 15;
 }
 
 /*.root{*/
